# fundamental_algo

./: CMakeLists.txt  README.md  main.cpp
course_project/: abstract_handler.h  allocator_type.h  collection.h  command.h  command_add_collection.h  command_add_data.h  command_add_pool.h  command_add_scheme.h  command_get_data.h  command_get_data_between.h  command_remove_collection.h  command_remove_data.h  command_remove_pool.h  command_remove_scheme.h  command_update_data.h  comparers.h  database_singleton.h  file_reader.h  logger_singleton.h  parse.h  request_handler_with_command.h  request_handler_with_command_chain.h  student_definition.h  tree_type.h
exception/: doesnt_exist.h  not_implemented.h  operation_not_supported.h
logger/: logger.h  logger_builder.cpp  logger_builder.h  logger_builder_concrete.cpp  logger_builder_concrete.h  logger_concrete.cpp  logger_concrete.h  logger_holder.h
memory/: border_descriptors.cpp  border_descriptors.h  buddy_allocator.cpp  buddy_allocator.h  global_heap_allocator.cpp  global_heap_allocator.h  list_memory.cpp  list_memory.h  memory.cpp  memory.h  memory_holder.cpp  memory_holder.h  test_memory.h  typename_holder.h
trees/: associative_container.h  avl.h  binary_search_tree.h  bplus_tree.h  main-2.cpp  rb_tree.h  search_tree.h  splay.h
